--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,89 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
-    android:orientation="vertical"
-    android:paddingLeft="20dp"
-    tools:context="com.example.time_planner.">
+    android:background="@android:color/white"
+    tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Home Page"
+        android:textSize="24sp" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="126dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="184dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:text="TIME"
-                android:textColor="@android:color/holo_blue_light"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                tools:ignore="MissingPrefix"
-                android:layout_gravity="left|center"/>
-
-            <TextView
-                android:layout_width="184dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:text="PLANNER"
-                android:textColor="@android:color/holo_blue_light"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                tools:ignore="MissingPrefix"
-                android:layout_gravity="left|center"/>
-
-
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/calender"
-            android:layout_width="30dp"
-            android:layout_height="35dp"
-            android:layout_gravity="right|center"
-            android:background="@drawable/twotone_calendar_month_24"/>
-
-    </FrameLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/taskRecycler"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </FrameLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="62dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
-            android:layout_weight="0.5"
-            android:drawableLeft="@drawable/baseline_add_24"
-            android:drawablePadding="10dp"
-            android:text="Tambah Task"
-            android:textSize="20sp"
-            android:id="@+id/tambahtask"
-            android:textAlignment="center"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
